styles/main.css
.flex {
  display: flex;
}

.flex-column {
  flex-direction: column;
}

.align-center {
  align-items: center;
}
.justify-center {
  justify-content: center;
}

.flex-1 {
  flex: 1;
}

.overflow-scroll {
  overflow: scroll;
}

.overflow-hidden {
  overflow: hidden;
}

.text-center {
  text-align: center;
}

.p0 {
  padding: 0.5em;
}

.p2 {
  padding: 2em;
}

.bold {
  font-weight: bold;
}

.position-relative {
  position: relative;
}

.status_item {
  display: flex;
  flex-direction: column;
  text-align: center;
  padding: 0.5em;
}

.status_item-icon {
  font-size: 3em;
}

.data_container {
  padding: 0.5em;
  border: 1px solid #eee;
  display: grid;
  grid-template-columns: auto auto auto;
  gap: 0.2em;
}

.border_selected {
  border: 2px solid #e99;
}
.border_invisible {
  border: 2px solid transparent;
}

.pointer {
  cursor: pointer;
}

.gap0 {
  gap: 0.2em;
}
.gap1 {
  gap: 0.4em;
}

.plant_list_item {
  display: grid;
  grid-template-columns: 1fr 3fr;
  /* padding: 0.5em; */
  border: 1px solid #eee;
  border-radius: 20px;
  overflow: hidden;
  position: relative;
  flex-shrink: 0;
  flex-basis: auto;
}

.plant_list_item .plant_list_item-picture {
  min-height: unset;
}

.plant_list_item-picture {
  min-height: 200px;
}

.plant_list_item-left {
  position: relative;
  max-width: 200px;
  border-right: 1px solid #eee;
  overflow: hidden;
}

.plant_list_item-right {
  padding: 0.5em;
}

.plant_list_item-name {
  background-color: #000000be;
  width: 100%;
  text-align: center;
  color: white;
  position: absolute;
  bottom: 0;
  left: 0;
}

.plant_list_item-id {
  font-size: 0.7em;
}

.plant_list_item-planted {
  font-size: 0.6em;
}

